--- a/package.json
+++ b/package.json
@@ -31,12 +31,18 @@
     "jade": "~1.6.0",
     "morgan": "~1.0.0",
     "serve-favicon": "~2.0.1",
+    "ramda": "^0.8.0"
+  },
+  "devDependencies": {
     "browserify": "^7.0.0",
     "gulp": "^3.8.10",
+    "gulp-autoprefixer": "^2.0.0",
     "gulp-common": "git+https://git@github.com/davezuko/gulp-common",
     "gulp-load-plugins": "^0.8.0",
+    "gulp-minify-css": "^0.3.11",
+    "gulp-plumber": "^0.6.6",
+    "gulp-sass": "^1.2.4",
     "minifyify": "^4.4.0",
-    "ramda": "^0.8.0",
     "vinyl-source-stream": "^1.0.0"
   }
 }
