--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "debug": "~0.7.4",
     "express": "~4.7.2",
     "jade": "~1.6.0",
+    "jquery": "^2.1.1",
     "morgan": "~1.0.0",
-    "serve-favicon": "~2.0.1",
-    "ramda": "^0.8.0"
+    "ramda": "^0.8.0",
+    "serve-favicon": "~2.0.1"
   },
   "devDependencies": {
     "browserify": "^7.0.0",
