--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "april-ludgate",
   "version": "0.0.0",
-  "description": "",
+  "description": "Dave Zuko smells",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
